// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading should render with many props assigned 1`] = `
<div
  className="headingContainer"
>
  <span
    className="anchorSpan anchorMargin"
    id="test"
  />
  <div
    className="hashLinkContainer"
  >
    <a
      data-testid="Hash Link"
      href="#test"
    >
      <span
        className="ScreenReaderOnly"
      >
        Scroll Link
      </span>
      <svg
        className="icon"
      />
    </a>
    <h2
      className="secondary test-class headingTextWithLinkIconOffset Heading"
    >
      Test
    </h2>
  </div>
</div>
`;

exports[`Heading should render with required props 1`] = `
<div
  className="headingContainer"
>
  <span
    className="anchorSpan anchorMargin"
    id="test"
  />
  <div
    className="hashLinkContainer"
  >
    <a
      data-testid="Hash Link"
      href="#test"
    >
      <span
        className="ScreenReaderOnly"
      >
        Scroll Link
      </span>
      <svg
        className="icon"
      />
    </a>
    <h2
      className="secondary headingTextWithLinkIconOffset Heading"
    >
      Test
    </h2>
  </div>
</div>
`;
